# OpenXRViewer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
EquirectConverter/: CMakeLists.txt
EquirectConverter/src/: Constants.h  EquirectConverter.cpp  File.cpp  File.h  Memory.cpp  Memory.h
OpenXRViewer/: CMakeLists.txt  OpenXRViewer.cpp  OpenXRViewer.h
OpenXRViewer/desktop/: desktop.cpp  desktop.h
OpenXRViewer/extensions/: desktop.cpp  desktop.h  models.cpp  models.h
OpenXRViewer/models/: cube.glb  sphere.glb  sphere_subdiv2.glb
OpenXRViewer/shaders/: photoviewer.hlsl
OpenXRViewer/xr_demo/: d3d_common.cpp  d3d_common.h  geometry.h  graphicsplugin.h  graphicsplugin_custom.cpp  graphicsplugin_d3d12.cpp  openxr_program.cpp  options.h  pch.h  xrdemo.cpp  xrdemo.h
comparison/: compare_multi.py  compare_ssim.py
things/: cube.blend
